.metadata/.plugins/org.eclipse.cdt.ui/RFID_LCD_MOTOR_RTC.build.log
10:22:15 **** Incremental Build of configuration Debug for project RFID_LCD_MOTOR_RTC ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:180:13: error: invalid storage class for function 'MX_I2C1_Init'
  180 | static void MX_I2C1_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:214:13: error: invalid storage class for function 'MX_RTC_Init'
  214 | static void MX_RTC_Init(void)
      |             ^~~~~~~~~~~
../Core/Src/main.c:296:13: error: invalid storage class for function 'MX_USART1_UART_Init'
  296 | static void MX_USART1_UART_Init(void)
      |             ^~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:329:13: error: invalid storage class for function 'MX_GPIO_Init'
  329 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:367:1: error: expected declaration or statement at end of input
  367 | }
      | ^
../Core/Src/main.c: At top level:
../Core/Src/main.c:61:13: warning: 'MX_USART1_UART_Init' used but never defined
   61 | static void MX_USART1_UART_Init(void);
      |             ^~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:358:6: warning: 'Error_Handler' defined but not used [-Wunused-function]
  358 | void Error_Handler(void)
      |      ^~~~~~~~~~~~~
../Core/Src/main.c:329:13: warning: 'MX_GPIO_Init' defined but not used [-Wunused-function]
  329 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:296:13: warning: 'MX_USART1_UART_Init' defined but not used [-Wunused-function]
  296 | static void MX_USART1_UART_Init(void)
      |             ^~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:214:13: warning: 'MX_RTC_Init' defined but not used [-Wunused-function]
  214 | static void MX_RTC_Init(void)
      |             ^~~~~~~~~~~
../Core/Src/main.c:180:13: warning: 'MX_I2C1_Init' defined but not used [-Wunused-function]
  180 | static void MX_I2C1_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:137:6: warning: 'SystemClock_Config' defined but not used [-Wunused-function]
  137 | void SystemClock_Config(void)
      |      ^~~~~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.

10:22:15 Build Failed. 6 errors, 7 warnings. (took 214ms)

